--- a/src/app/layouts/home-layout/sidebar/sidebar.component.html
+++ b/src/app/layouts/home-layout/sidebar/sidebar.component.html
@@ -1,5 +1,5 @@
 <ul class="side-menu" style="margin-top: 3rem;">
-  <li class="side-menu-item"><i class="bi bi-cpu"
+  <li class="side-menu-item"><i class="bi bi-people"
                                 style="margin-right: 1rem; color: #F1D00A; font-size:15px"></i><span>Hrms</span></li>
   <li class="side-menu-item"><i class="bi bi-bag-fill"
                                 style="margin-right: 1rem; color: #F1D00A; font-size:15px"></i><span>Siparişlerim</span>
