--- a/src/app/layouts/home-layout/sidebar/sidebar.component.html
+++ b/src/app/layouts/home-layout/sidebar/sidebar.component.html
@@ -18,7 +18,7 @@
 <h1 style="font-size: 0.9rem; margin-top: 3rem; margin-bottom: 1rem">FREELANCER</h1>
 
 <ul class="side-menu">
-  <li class="side-menu-item"><i class="bi bi-star-fill"
+  <li class="side-menu-item" [routerLink]="['client-request']"><i class="bi bi-star-fill"
                                 style="margin-right: 1rem; color: #F1D00A; font-size:15px"></i><span>Bana Uygun Alıcı
                                 İstekleri</span></li>
   <li class="side-menu-item"><i class="bi bi-shop-window"
