--- a/src/app/layouts/home-layout/sidebar/sidebar.component.html
+++ b/src/app/layouts/home-layout/sidebar/sidebar.component.html
@@ -24,7 +24,7 @@
   <li class="side-menu-item"><i class="bi bi-shop-window"
                                 style="margin-right: 1rem; color: #F1D00A; font-size:15px"></i><span>Satışlarım</span>
   </li>
-  <li class="side-menu-item"><i class="bi bi-file-earmark-break-fill"
+  <li class="side-menu-item" [routerLink]="['my-job-postings']"><i class="bi bi-file-earmark-break-fill"
                                 style="margin-right: 1rem; color: #F1D00A; font-size:15px"></i><span>İlanlarım</span>
   </li>
   <li class="side-menu-item"><i class="bi bi-book-half"
