--- a/src/app/components/my-job-postings/components/job-posting-card/job-posting-card.component.html
+++ b/src/app/components/my-job-postings/components/job-posting-card/job-posting-card.component.html
@@ -1,13 +1,15 @@
 <div class="card">
   <img class="image" src="https://images.squarespace-cdn.com/content/v1/555b7fd5e4b0c7c58cfd6cf4/1459869684053-HJP30KCVRL6QHTMDMA84/c-img.png?format=1500w"/>
 
-  <div class="title">
-    <h1>Cranberry</h1>
-    <p>5000TL</p>
-  </div>
+  <div class="card-content">
+    <div class="title">
+      <h1>Cranberry</h1>
+      <p>5000TL</p>
+    </div>
 
-  <div class="description">
-    <p>Ben, mobil ve web uygulama geliştiririm</p>
+    <div class="description">
+      <p>Ben, mobil ve web uygulama geliştiririm</p>
+    </div>
   </div>
 
   <div class="tool-bar">
