--- a/src/app/components/my-job-postings/components/job-posting-card/job-posting-card.component.css
+++ b/src/app/components/my-job-postings/components/job-posting-card/job-posting-card.component.css
@@ -3,7 +3,6 @@
   flex-direction: column;
   background-color: #3E497A;
   border-radius: 5px;
-  padding: 0.7rem;
 
   box-shadow: 0px 0px 20px 1px #3E497A;
 
@@ -12,8 +11,13 @@
   position: relative;
 }
 
-.card img{
-  max-width: 280px;
+img{
+  border-top-right-radius: 5px;
+  border-top-left-radius: 5px;
+}
+
+.card-content{
+  padding: 0.7rem;
 }
 
 .title{
