--- a/src/app/components/client-requests/client-requests.component.html
+++ b/src/app/components/client-requests/client-requests.component.html
@@ -19,17 +19,17 @@
     </div>
   </div>
 
-  <app-client-request name="Abdullah" title="MT4 Forex Robotu İlave Komut"
+  <app-client-request requests="5" budget="6000" time="Birkaç gün içinde" name="Abdullah" title="MT4 Forex Robotu İlave Komut"
                       description="Mevcut MT4 robotumuza bir komut eklemek istiyoruz. Komut basitçe: Örneğin açık işlemler -1700$ ı gördüğü zaman tüm işlemleri en büyük pozdan başlayarak kapatacak, yani stop olacak ve bir daha işlem açmayacak.">
   </app-client-request>
-  <app-client-request name="Emre" title="Ticaret Sitesi Mobil Uygulaması"
+  <app-client-request requests="10" budget="5000" time="Bir ay içinde" name="Emre" title="Ticaret Sitesi Mobil Uygulaması"
                       description="Merhaba arkadaşlar,
             Bir web sitem var bu web sitesi ile yurt dışındaki müşteriler kıyafet talebinde bulunuyor, bana link gönderiyor ben temin ediyorum ve onlara gönderiyorum. Uygulamanın anasayfasında elimde olan bazı ürünler olacak, web sitemdeki üye bilgileri, işlemler vs ile entegre çalışması gerek. Müşteriler hem hazır ürünlerden seçebilecek hem de istediği ürünlerin linkini gönderebilecek, ama ürünler kişi başı 50 linke kadar ulaşabilir. Ayrıca her müşteri ile iletişime geçmem gerekiyor, mesajların kalıcı olması gerek. Teslimat ve tedarik takibi gibi adımları müşteriler görebilmeli. Ayrıca girilen linkteki ürün görselini de ben panelimde görmek istiyorum. Uygulama tasarımı konusunda çok fazla bir bilgim yok, önerilerinizi iletebilirsiniz. Arayüz tasarımı konusunda desteğe ihtiyacınız olduğunda yardımcı olabilirim. Fiyat temsilidir, piyasayı bilmediğim için bu şekilde girdim daha fazla da olabilir. ">
   </app-client-request>
-  <app-client-request name="John" title="Trendyol entegrasyonu"
+  <app-client-request requests="31" budget="200" time="İki üç ay içinde" name="John" title="Trendyol entegrasyonu"
                       description="E-ticaret sitemiz mevcut pazaryeri entegrasyonu var ,trendyol entegrasyonunda barkod bilgisi çekmiyor ve aynı olan barkodlarda hata vermiyor. İşinin ehli olan arkadaşlar iletişime geçerse memnun olurum.">
   </app-client-request>
-  <app-client-request name="Furkan" title="teamspeak 3 müşteri bayi ve admin paneli yaptırmak istiyoruz"
+  <app-client-request requests="50" budget="100" time="Bir hafta içinde" name="Furkan" title="teamspeak 3 müşteri bayi ve admin paneli yaptırmak istiyoruz"
                       description="teamspeak 3 müşteri bayi ve admin paneli sanal pos entegrasyon bakiye sistemi kiralama sistemi bayi sayfası admin sayfası alt kullanıcılar yatqa bağlama ve kayıt olurken tc kimlik zorunluluğu istiyoruz kodlicak kişiye ücreti hemen teslim edilir">
   </app-client-request>
 </div>
