--- a/src/app/components/client-requests/components/client-request/client-request.component.html
+++ b/src/app/components/client-requests/components/client-request/client-request.component.html
@@ -17,15 +17,15 @@
     <div class="client-request-footer-description">
       <div class="client-request-footer-description-item">
         <i class="bi bi-wallet2" style="font-size: 1.5rem; margin-right: 0.7rem;"></i>
-        Bütçe: <span style="font-weight: 600;">300TL</span>
+        Bütçe: <span style="font-weight: 600;">{{this.budget}}TL</span>
       </div>
       <div class="client-request-footer-description-item">
         <i class="bi bi-stopwatch" style="font-size: 1.5rem; margin-right: 0.7rem;"></i>
-        Süre: <span style="font-weight: 600;">Birkaç gün içinde</span>
+        Süre: <span style="font-weight: 600;">{{this.time}}</span>
       </div>
       <div class="client-request-footer-description-item">
         <i class="bi bi-star" style="font-size: 1.5rem; margin-right: 0.7rem;"></i>
-        Teklifler: <span style="font-weight: 600;">4</span>
+        Teklifler: <span style="font-weight: 600;">{{this.requests}}</span>
       </div>
     </div>
   </div>
