--- a/src/app/components/my-job-postings/my-job-postings.component.html
+++ b/src/app/components/my-job-postings/my-job-postings.component.html
@@ -3,7 +3,7 @@
     <h1 style="font-weight: 300;">
       İş <span style="font-weight: 600;">İlanlarım</span>
     </h1>
-    <button class="create-new-job">Yeni İş İlanı Oluştur</button>
+    <button class="create-new-job" [routerLink]="['/create-job-posting']">Yeni İş İlanı Oluştur</button>
   </div>
   <p class="page-description">Tüm iş ilanlarını buradan takip edebilir, yönetebilir ve yeni iş ilanları oluşturabilirsin.</p>
 
