--- a/src/app/layouts/create-job-posting-layout/create-job-posting-layout.component.html
+++ b/src/app/layouts/create-job-posting-layout/create-job-posting-layout.component.html
@@ -7,15 +7,15 @@
   </div>
 </div>
 
-<div class="form-footer" style="position: absolute; bottom: 0">
+<div class="form-footer">
   <div class="form-footer-content">
     <div class="form-footer-description">
-      <p>Adım 1 / 5</p>
+      <p style="font-size: 0.8rem; font-weight: 600">Adım 1 / 5</p>
       <p>Kategori Seçimi</p>
     </div>
-    <div class="form-footer-description">
+    <div class="form-footer-category">
       <p>Kategori</p>
     </div>
   </div>
-  <button>Devam Et</button>
+  <button class="button">Devam Et</button>
 </div>
