--- a/src/app/components/create-job-posting/components/category/category.component.html
+++ b/src/app/components/create-job-posting/components/category/category.component.html
@@ -1,6 +1,6 @@
 <div class="card">
   <img [src]="this.categoryImageUrl">
-  <div class="card-content">
+  <div class="card-content" style="margin: 1rem">
     <div class="card-content-title">{{this.title}}</div>
     <div class="card-content-freelancer"><span>{{this.freelancer}}</span> Freelancer</div>
     <div class="card-content-active-jobs"><span>{{this.active}}</span> Aktif İş İlanı</div>
