--- a/src/app/layouts/create-job-posting-layout/create-job-posting-layout.component.css
+++ b/src/app/layouts/create-job-posting-layout/create-job-posting-layout.component.css
@@ -31,6 +31,7 @@
 
 .form-footer-category {
   margin-left: 5rem;
+  align-self: center;
 }
 
 .button {
@@ -39,9 +40,9 @@
   width: 10rem;
   height: 100%;
   text-align: center;
-  background-color: #F1D00A;
+  background-color: darkgrey;
   border: 0px;
   color: white;
-  border-radius: 3px;
+  border-radius: 3px 0px 0px 3px;
   cursor: pointer;
 }
