--- a/src/app/layouts/create-job-posting-layout/create-job-posting-layout.component.html
+++ b/src/app/layouts/create-job-posting-layout/create-job-posting-layout.component.html
@@ -13,9 +13,12 @@
       <p style="font-size: 0.8rem; font-weight: 600">Adım 1 / 5</p>
       <p>Kategori Seçimi</p>
     </div>
+    <div *ngIf="!this.categoryService.selectedCategory" class="form-footer-category">
+      Kategori
+    </div>
     <div class="form-footer-category">
-      <p>Kategori</p>
+      <p>{{this.categoryService.selectedCategory?.title}}</p>
     </div>
   </div>
-  <button class="button">Devam Et</button>
+  <button class="button" [style]="getStyle()">Devam Et</button>
 </div>
