--- a/src/app/components/create-job-posting/create-job-posting.component.css
+++ b/src/app/components/create-job-posting/create-job-posting.component.css
@@ -1,8 +1,8 @@
-.page-title{
+.page-title {
   margin-top: 2.5rem;
 }
 
-.categories{
+.categories {
   display: grid;
   grid-template-columns: 20% 20% 20% 20%;
   align-items: center;
@@ -11,6 +11,49 @@
   margin-top: 3rem;
 }
 
-.card-shadow{
+.card-shadow {
   box-shadow: 0px 0px 20px 1px #3E497A;
+}
+
+.software-categories {
+  justify-content: space-between;
+  gap: 1rem;
+  align-items: center;
+  margin-top: 3rem;
+  margin-left: 3rem;
+  display: grid;
+  grid-template-columns: 50% 50%;
+}
+
+.soft-category-background-color {
+  background-color: #F1D00A;
+}
+
+.category-container {
+  font-weight: 600;
+  cursor: pointer;
+  border-radius: 10px;
+  padding: 1rem;
+  border: 1px solid gray;
+}
+
+.job-posting-title {
+  padding-top: 1rem;
+  padding-bottom: 1rem;
+  font-weight: 600;
+  width: 100%;
+  outline: none;
+  border: none;
+  margin-top: 2px;
+}
+
+.job-posting-title-container {
+  display: flex;
+  align-items: center;
+  margin-top: 2rem;
+  border: 1px solid #F1D00A;
+}
+
+.job-posting-title::placeholder {
+  opacity: 0.7;
 }
