--- a/src/app/layouts/app-bar/app-bar.component.html
+++ b/src/app/layouts/app-bar/app-bar.component.html
@@ -5,7 +5,7 @@
     <input placeholder="Arama yap..." class="nav-search"/>
   </div>
   <div class="nav-end">
-    <button class="nav-login">Giriş</button>
+    <button class="nav-login" [routerLink]="['/login']">Giriş</button>
     <button class="nav-register">Kaydol</button>
   </div>
 </nav>
