--- a/src/app/components/create-job-posting/create-job-posting.component.html
+++ b/src/app/components/create-job-posting/create-job-posting.component.html
@@ -50,5 +50,14 @@
       <input class="job-posting-title" placeholder=" uzman olduğum bir konuda..."/>
     </div>
 
+    <h1 class="page-title">Yapacağın işin detaylarını minimum 150 karakterle açıkla</h1>
+    <div class="job-posting-title-container">
+      <textarea style="resize: vertical; margin-left: 1rem" class="job-posting-title" placeholder="Minimum 150 karakterden oluşacak şekilde yapacağın detaylarını anlatır mısın?"></textarea>
+    </div>
+
+    <h1 class="page-title">Siparişe başlaman için gerekenler</h1>
+    <div class="job-posting-title-container">
+      <textarea style="resize: vertical; margin-left: 1rem" class="job-posting-title" placeholder="Siparişe hemen başlamak için ihtiyacın olacakları yazar mısın?"></textarea>
+    </div>
   </div>
 </div>
