--- a/src/app/layouts/create-job-posting-layout/create-job-posting-layout.component.css
+++ b/src/app/layouts/create-job-posting-layout/create-job-posting-layout.component.css
@@ -8,7 +8,7 @@
 .form-footer {
   display: flex;
   justify-content: space-between;
-  position: sticky;
+  position: fixed;
   bottom: 0px;
   width: 100%;
   height: 4rem;
