Create job posting form.

--- a/src/app/components/create-job-posting/create-job-posting.component.html
+++ b/src/app/components/create-job-posting/create-job-posting.component.html
@@ -39,7 +39,7 @@
     <p>Harika! Şimdi ilanını oluşturmaya başlayabilirsin. 🚀</p>
   </div>
 
-  <form style="margin-top: 3rem; margin-left: 3rem">
+  <form [formGroup]="jobPostingForm" style="margin-top: 3rem; margin-left: 3rem">
     <h1 class="page-title">Etkileyici bir başlık bul!</h1>
     <p>
       Başlık "Ben... " ile başlayan bir cümle olmalı ve bir fiille bitmelidir. Başlığın sonunda herhangi bir noktalama
