Create job posting form.

--- a/src/app/components/create-job-posting/create-job-posting.component.html
+++ b/src/app/components/create-job-posting/create-job-posting.component.html
@@ -46,24 +46,24 @@
       işareti kullanmamalısın.</p>
     <div class="job-posting-title-container">
       <p style="margin-right: 10px; margin-left: 1rem">Ben,</p>
-      <input class="job-posting-title" placeholder=" uzman olduğum bir konuda..."/>
+      <input formControlName="title" class="job-posting-title" placeholder=" uzman olduğum bir konuda..."/>
     </div>
 
     <h1 class="page-title">Yapacağın işin detaylarını minimum 150 karakterle açıkla</h1>
     <div class="job-posting-title-container">
-      <textarea style="resize: vertical; margin-left: 1rem" class="job-posting-title"
+      <textarea formControlName="description" style="resize: vertical; margin-left: 1rem" class="job-posting-title"
                 placeholder="Minimum 150 karakterden oluşacak şekilde yapacağın detaylarını anlatır mısın?"></textarea>
     </div>
 
     <h1 class="page-title">Siparişe başlaman için gerekenler</h1>
     <div class="job-posting-title-container">
-      <textarea style="resize: vertical; margin-left: 1rem" class="job-posting-title"
+      <textarea formControlName="requirements" style="resize: vertical; margin-left: 1rem" class="job-posting-title"
                 placeholder="Siparişe hemen başlamak için ihtiyacın olacakları yazar mısın?"></textarea>
     </div>
 
     <h1 class="page-title">Proje için istediğin ücret</h1>
     <div class="job-posting-title-container">
-      <input style="margin-left: 1rem" class="job-posting-title" placeholder="Ücretinizi buraya girebilirsiniz." type="number"/>
+      <input formControlName="price" style="margin-left: 1rem" class="job-posting-title" placeholder="Ücretinizi buraya girebilirsiniz." type="number"/>
     </div>
 
     <div style="height: 5rem">
