--- a/src/app/components/login/login.component.css
+++ b/src/app/components/login/login.component.css
@@ -2,16 +2,17 @@
   display: flex;
   flex-direction: column;
   margin-top: 10rem;
-  gap: 1rem;
 }
 
 input{
   font-weight: 600;
   width: 15rem;
   padding: 0.5rem;
+  margin-top: 0.3rem;
 }
 
 button{
+  margin-top: 1rem;
   padding: 0.7rem 2.5rem 0.7rem 2.5rem;
   font-size: 0.6rem;
   font-weight: 600;
