--- a/src/app/layouts/create-job-posting-layout/create-job-posting-layout.component.html
+++ b/src/app/layouts/create-job-posting-layout/create-job-posting-layout.component.html
@@ -10,7 +10,7 @@
 <div class="form-footer">
   <div class="form-footer-content">
     <div class="form-footer-description">
-      <p style="font-size: 0.8rem; font-weight: 600">Adım {{this.categoryService.stage}} / 5</p>
+      <p style="font-size: 0.8rem; font-weight: 600">Adım {{this.categoryService.stage}} / 3</p>
       <p>Kategori Seçimi</p>
     </div>
     <div *ngIf="!this.categoryService.selectedCategory" class="form-footer-category">
@@ -20,5 +20,5 @@
       <p>{{this.categoryService.selectedCategory?.title}}</p>
     </div>
   </div>
-  <button class="button" [style]="getStyle()" (click)="nextStage()">Devam Et</button>
+  <button class="button" [style]="getStyle()" (click)="nextStage()">{{this.categoryService.stage == 3 ? "Yayınla": "Devam"}}</button>
 </div>
