--- a/src/app/layouts/app-bar/app-bar.component.html
+++ b/src/app/layouts/app-bar/app-bar.component.html
@@ -14,7 +14,7 @@
   </div>
 </nav>
 
-<div class="nav-categories">
+<!--<div class="nav-categories">
   <ul class="nav-items">
     <li class="nav-item"><a>Grafik & Tasarım</a></li>
     <li class="nav-item"><a>İnternet Reklamcılığı</a></li>
@@ -24,4 +24,4 @@
     <li class="nav-item"><a>Yazılım & Teknoloji</a></li>
     <li class="nav-item"><a>İş ve Yönetim</a></li>
   </ul>
-</div>
+</div>-->
