Create job posting form.

--- a/src/app/components/create-job-posting/create-job-posting.component.html
+++ b/src/app/components/create-job-posting/create-job-posting.component.html
@@ -52,3 +52,9 @@
     </div>
   </form>
 </div>
+
+<div id="stage-3" *ngIf="this.categoryService.stage == 3">
+  <div style="margin-left: 3rem">
+    <h1 class="page-title">İlanınız Yayınlanmaya Hazır!</h1>
+  </div>
+</div>
