Create job posting form.

--- a/src/app/components/my-job-postings/components/job-posting-card/job-posting-card.component.html
+++ b/src/app/components/my-job-postings/components/job-posting-card/job-posting-card.component.html
@@ -4,11 +4,11 @@
   <div class="card-content">
     <div class="title">
       <h1>Cranberry</h1>
-      <p>5000TL</p>
+      <p>{{this.price | currency}}</p>
     </div>
 
     <div class="description">
-      <p>Ben, mobil ve web uygulama geliştiririm</p>
+      <p>{{this.description}}</p>
     </div>
   </div>
 
