--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -3,6 +3,6 @@
   <input formControlName="email" placeholder="E-posta veya kullanıcı adı" type="email"/>
   <p style="font-weight: 600; margin-top: 1rem;">Password</p>
   <input formControlName="password" placeholder="Şifre" type="password"/>
-  <button (click)="login()">Giriş Yap</button>
+  <button>Giriş Yap</button>
 </form>
 
