--- a/src/app/components/my-job-postings/my-job-postings.component.html
+++ b/src/app/components/my-job-postings/my-job-postings.component.html
@@ -1,4 +1,4 @@
-<div style=";margin-top: 3rem; margin-left: 3rem; width: 100%;">
+<div style="margin-top: 3rem; margin-left: 3rem; width: 100%;">
   <div class="header">
     <h1 style="font-weight: 300;">
       İş <span style="font-weight: 600;">İlanlarım</span>
