--- a/src/app/layouts/app-bar/app-bar.component.html
+++ b/src/app/layouts/app-bar/app-bar.component.html
@@ -1,5 +1,5 @@
 <nav class="nav-container">
-  <h1 class="nav-title" [routerLink]="['']">HRMS</h1>
+  <h1 class="nav-title" routerLink = "/">HRMS</h1>
   <div class="search-container">
     <i class="bi bi-search"></i>
     <input placeholder="Arama yap..." class="nav-search"/>
