--- a/src/app/components/client-requests/components/client-request/client-request.component.html
+++ b/src/app/components/client-requests/components/client-request/client-request.component.html
@@ -25,7 +25,7 @@
       </div>
       <div class="client-request-footer-description-item">
         <i class="bi bi-star" style="font-size: 1.5rem; margin-right: 0.7rem;"></i>
-        Teklifler: <span style="font-weight: 600;">{{this.requests}}</span>
+        Teklifler: <span style="font-weight: 600;">{{this.offers}}</span>
       </div>
     </div>
   </div>
