--- a/src/app/components/client-requests/components/client-request/client-request.component.html
+++ b/src/app/components/client-requests/components/client-request/client-request.component.html
@@ -1,31 +1,31 @@
 <div class="client-request">
   <div class="client-request-header">
-    <p style="margin-left: 1rem; font-weight: 600;">{{this.name}}</p>
+    <p style="margin-left: 1rem; font-weight: 600;">{{this.clientRequest.userName}}</p>
     <div>
       <button class="send-message">Mesaj At</button>
       <button class="send-offer">Teklif Ver</button>
     </div>
   </div>
   <div class="client-request-content">
-    <div class="client-request-content-title">{{this.title}}</div>
+    <div class="client-request-content-title">{{this.clientRequest.title}}</div>
     <div class="client-request-content-description">
-      {{this.description}}
+      {{this.clientRequest.description}}
     </div>
   </div>
   <div class="client-request-footer">
-    <div class="history">29 Temmuz</div>
+    <div class="history">{{this.clientRequest.createdDate | date}}</div>
     <div class="client-request-footer-description">
       <div class="client-request-footer-description-item">
         <i class="bi bi-wallet2" style="font-size: 1.5rem; margin-right: 0.7rem;"></i>
-        Bütçe: <span style="font-weight: 600;">{{this.budget}}TL</span>
+        Bütçe: <span style="font-weight: 600;">{{this.clientRequest.budget}}TL</span>
       </div>
       <div class="client-request-footer-description-item">
         <i class="bi bi-stopwatch" style="font-size: 1.5rem; margin-right: 0.7rem;"></i>
-        Süre: <span style="font-weight: 600;">{{this.time}}</span>
+        Süre: <span style="font-weight: 600;">{{this.clientRequest.deadLine}}</span>
       </div>
       <div class="client-request-footer-description-item">
         <i class="bi bi-star" style="font-size: 1.5rem; margin-right: 0.7rem;"></i>
-        Teklifler: <span style="font-weight: 600;">{{this.offers}}</span>
+        Teklifler: <span style="font-weight: 600;">{{this.clientRequest.offers}}</span>
       </div>
     </div>
   </div>
