translated into english

--- a/src/app/components/client-requests/client-requests.component.html
+++ b/src/app/components/client-requests/client-requests.component.html
@@ -1,15 +1,7 @@
 <div style="margin-top: 3rem; margin-left: 3rem; padding-bottom: 2rem;">
   <h1 style="font-weight: 300">
-    Bana Uygun <span style="font-weight: 600">Alıcı İstekleri</span>
+    <span style="font-weight: 600">Client Requests</span> Suitable for Me
   </h1>
-  <div style="display: flex; text-align: center; justify-content: start">
-    <p style="font-size: 1.2rem; opacity: 0.6">
-      Hizmet verdiğin kategorilerle en iyi eşleşen alıcı isteklerini senin için
-      toparladık.
-    </p>
-    <p>😉</p>
-  </div>
-
   <div style="display: flex; flex-direction: row">
     <div
       class="part-one"
@@ -24,7 +16,7 @@
         align-items: center;
       "
     >
-      Tüm Alıcı İsteklerini Göster
+      Show All Client Requests
     </div>
     <div
       class="part-two"
@@ -40,7 +32,7 @@
         align-items: center;
       "
     >
-      Sadece Teklif Verdiklerimi Göster
+      Show Only Requests I Made an Offer
     </div>
   </div>
 
