--- a/src/app/layouts/home-layout/sidebar/sidebar.component.html
+++ b/src/app/layouts/home-layout/sidebar/sidebar.component.html
@@ -1,36 +1,79 @@
-<ul class="side-menu" style="margin-top: 3rem;">
-  <li class="side-menu-item"><i class="bi bi-people"
-                                style="margin-right: 1rem; color: #F1D00A; font-size:15px"></i><span>Hrms</span></li>
-  <li class="side-menu-item"><i class="bi bi-bag-fill"
-                                style="margin-right: 1rem; color: #F1D00A; font-size:15px"></i><span>Siparişlerim</span>
+<ul class="side-menu" style="margin-top: 3rem">
+  <li class="side-menu-item">
+    <i
+      class="bi bi-people"
+      style="margin-right: 1rem; color: #f1d00a; font-size: 15px"
+    ></i
+    ><span>Hrms</span>
   </li>
-  <li class="side-menu-item"><i class="bi bi-star-fill"
-                                style="margin-right: 1rem; color: #F1D00A; font-size:15px"></i><span>Özel Alıcı
-                                İsteklerim</span></li>
-  <li class="side-menu-item"><i class="bi bi-list-stars"
-                                style="margin-right: 1rem; color: #F1D00A; font-size:15px"></i><span>Listelerim</span>
+  <li class="side-menu-item">
+    <i
+      class="bi bi-bag-fill"
+      style="margin-right: 1rem; color: #f1d00a; font-size: 15px"
+    ></i
+    ><span>My Orders</span>
   </li>
-  <li class="side-menu-item"><i class="bi bi-wallet-fill"
-                                style="margin-right: 1rem; color: #F1D00A; font-size:15px"></i><span>Cüzdanım</span>
+  <li class="side-menu-item">
+    <i
+      class="bi bi-star-fill"
+      style="margin-right: 1rem; color: #f1d00a; font-size: 15px"
+    ></i
+    ><span>My Special Client Requests</span>
+  </li>
+  <li class="side-menu-item">
+    <i
+      class="bi bi-list-stars"
+      style="margin-right: 1rem; color: #f1d00a; font-size: 15px"
+    ></i
+    ><span>My Lists</span>
+  </li>
+  <li class="side-menu-item">
+    <i
+      class="bi bi-wallet-fill"
+      style="margin-right: 1rem; color: #f1d00a; font-size: 15px"
+    ></i
+    ><span>My Wallet</span>
   </li>
 </ul>
 
-<h1 style="font-size: 0.9rem; margin-top: 3rem; margin-bottom: 1rem">FREELANCER</h1>
+<h1 style="font-size: 0.9rem; margin-top: 3rem; margin-bottom: 1rem">
+  FREELANCER
+</h1>
 
 <ul class="side-menu">
-  <li class="side-menu-item" [routerLink]="['/client-request']"><i class="bi bi-star-fill"
-                                style="margin-right: 1rem; color: #F1D00A; font-size:15px"></i><span>Bana Uygun Alıcı
-                                İstekleri</span></li>
-  <li class="side-menu-item"><i class="bi bi-shop-window"
-                                style="margin-right: 1rem; color: #F1D00A; font-size:15px"></i><span>Satışlarım</span>
+  <li class="side-menu-item" [routerLink]="['/client-request']">
+    <i
+      class="bi bi-star-fill"
+      style="margin-right: 1rem; color: #f1d00a; font-size: 15px"
+    ></i
+    ><span>Client Requests Suitable for Me</span>
   </li>
-  <li class="side-menu-item" [routerLink]="['/my-job-postings']"><i class="bi bi-file-earmark-break-fill"
-                                style="margin-right: 1rem; color: #F1D00A; font-size:15px"></i><span>İlanlarım</span>
+  <li class="side-menu-item">
+    <i
+      class="bi bi-shop-window"
+      style="margin-right: 1rem; color: #f1d00a; font-size: 15px"
+    ></i
+    ><span>My Sales</span>
   </li>
-  <li class="side-menu-item"><i class="bi bi-book-half"
-                                style="margin-right: 1rem; color: #F1D00A; font-size:15px"></i><span>Portfolyom</span>
+  <li class="side-menu-item" [routerLink]="['/my-job-postings']">
+    <i
+      class="bi bi-file-earmark-break-fill"
+      style="margin-right: 1rem; color: #f1d00a; font-size: 15px"
+    ></i
+    ><span>My Adverts</span>
   </li>
-  <li class="side-menu-item"><i class="bi bi-coin"
-                                style="margin-right: 1rem; color: #F1D00A; font-size:15px"></i><span>bicoin
-                                Hesabım</span></li>
+  <li class="side-menu-item">
+    <i
+      class="bi bi-book-half"
+      style="margin-right: 1rem; color: #f1d00a; font-size: 15px"
+    ></i
+    ><span>My Portfolio</span>
+  </li>
+  <li class="side-menu-item">
+    <i
+      class="bi bi-coin"
+      style="margin-right: 1rem; color: #f1d00a; font-size: 15px"
+    ></i
+    ><span>My freecoin Account</span>
+  </li>
 </ul>
