--- a/src/app/components/client-requests/components/client-request/client-request.component.html
+++ b/src/app/components/client-requests/components/client-request/client-request.component.html
@@ -2,8 +2,8 @@
   <div class="client-request-header">
     <p style="margin-left: 1rem; font-weight: 600;">{{this.clientRequest.userName}}</p>
     <div>
-      <button class="send-message">Mesaj At</button>
-      <button class="send-offer">Teklif Ver</button>
+      <button class="send-message">Send Message</button>
+      <button class="send-offer">Propose</button>
     </div>
   </div>
   <div class="client-request-content">
@@ -17,15 +17,15 @@
     <div class="client-request-footer-description">
       <div class="client-request-footer-description-item">
         <i class="bi bi-wallet2" style="font-size: 1.5rem; margin-right: 0.7rem;"></i>
-        Bütçe: <span style="font-weight: 600;">{{this.clientRequest.budget}}TL</span>
+        Budget: <span style="font-weight: 600;">{{this.clientRequest.budget | currency}}</span>
       </div>
       <div class="client-request-footer-description-item">
         <i class="bi bi-stopwatch" style="font-size: 1.5rem; margin-right: 0.7rem;"></i>
-        Süre: <span style="font-weight: 600;">{{this.clientRequest.deadLine}}</span>
+        Deadline: <span style="font-weight: 600;">{{this.clientRequest.deadLine}}</span>
       </div>
       <div class="client-request-footer-description-item">
         <i class="bi bi-star" style="font-size: 1.5rem; margin-right: 0.7rem;"></i>
-        Teklifler: <span style="font-weight: 600;">{{this.clientRequest.offers}}</span>
+        Proposals: <span style="font-weight: 600;">{{this.clientRequest.offers}}</span>
       </div>
     </div>
   </div>
