--- a/src/app/layouts/app-bar/app-bar.component.html
+++ b/src/app/layouts/app-bar/app-bar.component.html
@@ -2,11 +2,11 @@
   <h1 class="nav-title" routerLink = "/">HRMS</h1>
   <div class="search-container">
     <i class="bi bi-search"></i>
-    <input placeholder="Arama yap..." class="nav-search"/>
+    <input placeholder="Search..." class="nav-search"/>
   </div>
   <div class="nav-end" *ngIf="!authService.isAuthenticated()">
-    <button class="nav-login" [routerLink]="['/auth/login']">Giriş</button>
-    <button class="nav-register" [routerLink]="['/auth/register']">Kaydol</button>
+    <button class="nav-login" [routerLink]="['/auth/login']">Login</button>
+    <button class="nav-register" [routerLink]="['/auth/register']">Register</button>
   </div>
   <div class="nav-end" style="align-items: center" *ngIf="authService.isAuthenticated()">
     <p class="email">{{this.getUserDetail()}}</p>
